# share2text

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  wrapper.gradle.kts
.github/workflows/: build-deploy.yml  build-gradle-deploy.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/share2text/share/: MainActivity.kt  Share2TextApp.kt
app/src/main/java/com/share2text/share/audio/: AudioDecoder.kt
app/src/main/java/com/share2text/share/di/: Modules.kt
app/src/main/java/com/share2text/share/download/: ModelRepository.kt
app/src/main/java/com/share2text/share/nativebridge/: WhisperBridge.kt
app/src/main/java/com/share2text/share/repo/: TranscriptionRepository.kt
app/src/main/java/com/share2text/share/service/: TranscriptionService.kt
app/src/main/java/com/share2text/share/ui/screens/: HomeScreen.kt  ModelPickerScreen.kt  SettingsScreen.kt  SharedUrisHolder.kt  TranscriptionScreen.kt
app/src/main/java/com/share2text/share/ui/share/: ShareEntryActivity.kt
app/src/main/java/com/share2text/share/util/: FileUtils.kt
app/src/main/java/com/share2text/share/viewmodel/: ModelViewModel.kt  SettingsViewModel.kt  TranscriptionViewModel.kt
app/src/main/manifests/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification_dot.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
